--- a/ranks.html
+++ b/ranks.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Ranks</title>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>CustomZone — Ranks</title>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 <style>
-body { background-color:#222; color:#fff; font-family:sans-serif; text-align:center; }
-h1 { margin-top:50px; color:orange; }
-ul { list-style:none; font-size:20px; }
-a { color:yellow; text-decoration:none; }
+  body{margin:0;background:#000;color:#fff;font-family:Roboto, sans-serif;padding:24px}
+  .wrap{max-width:920px;margin:0 auto}
+  h1{font-family:'Press Start 2P';color:#ffb347;text-align:center}
+  .block{background:rgba(255,255,255,0.02);padding:14px;border-radius:10px;margin:12px 0;border:1px solid rgba(255,255,255,0.02)}
+  .cmd{font-weight:700;color:#ffd27a}
+  a.back{color:#ffd27a;text-decoration:underline;display:inline-block;margin-top:12px}
 </style>
 </head>
 <body>
-<h1>CustomZone Ranks!</h1>
-<ul>
-<li>Fly permissions: /fly, /seen</li>
-<li>VIP: /kit vip</li>
-<li>Meteorolog</li>
-<li>Creative</li>
-<li>AntiGriefer</li>
-<li>Admin</li>
-<li>Operator</li>
-<li>Deputy</li>
-<li>Helper</li>
-<li>Elite</li>
-<li>AntiGriefer+: sc</li>
-<li>COR-Status: wt (Exclusive ranks)</li>
-<li>Celestial: /freez</li>
-</ul>
-<a href="index.html">Back</a>
+  <div class="wrap">
+    <h1>CustomZone Ranks</h1>
+
+    <div class="block"><strong>Fly</strong> — /fly</div>
+    <div class="block"><strong>Meteorolog</strong> — /day, /night</div>
+    <div class="block"><strong>VIP</strong> — /kit vip</div>
+    <div class="block"><strong>Meteorolog</strong> — /day, /night</div>
+    <div class="block"><strong>Creative</strong></div>
+    <div class="block"><strong>AntiGriefer</strong></div>
+    <div class="block"><strong>Admin</strong></div>
+    <div class="block"><strong>Operator</strong></div>
+    <div class="block"><strong>Deputy</strong></div>
+    <div class="block"><strong>Helper</strong></div>
+    <div class="block"><strong>Elite</strong></div>
+    <div class="block"><strong>AntiGriefer+</strong></div>
+    <div class="block"><strong>COR-Status</strong></div>
+    <div class="block"><strong>Celestial</strong> — /freez</div>
+
+    <a class="back" href="index.html">← Back to home</a>
+  </div>
 </body>
-</html>
+                         </html>
