--- a/rules.html
+++ b/rules.html
@@ -1,24 +1,72 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Rules</title>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>CustomZone — Rules</title>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 <style>
-body { background-color:#111; color:#fff; font-family:sans-serif; text-align:center; }
-h1 { margin-top:50px; color:orange; }
-ul { list-style:none; font-size:20px; }
-a { color:yellow; text-decoration:none; }
+  body{margin:0;background:#000;color:#fff;font-family:Roboto, sans-serif;padding:28px}
+  .wrap{max-width:980px;margin:0 auto}
+  h1{font-family:'Press Start 2P';color:#ffb347;text-align:center}
+  .section{background:rgba(255,255,255,0.02);padding:18px;border-radius:12px;margin:14px 0;border:1px solid rgba(255,255,255,0.02)}
+  .note{color:#cfcfcf;font-size:14px;margin-bottom:8px}
+  .rule{margin:8px 0;padding-left:10px}
+  a.back{color:#ffd27a;text-decoration:underline;display:inline-block;margin-top:12px}
 </style>
 </head>
 <body>
-<h1>Rules!</h1>
-<ul>
-<li>No griefing other players</li>
-<li>No cheating / hacking</li>
-<li>Be respectful</li>
-<li>Do not spam chat</li>
-<li>Follow staff instructions</li>
-</ul>
-<a href="index.html">Back</a>
+  <div class="wrap">
+    <h1>Server Rules</h1>
+
+    <div class="section">
+      <div class="note"><strong>What you need to know:</strong></div>
+      <div class="rule">1. If you play on our server, you are responsible for knowing all the server rules.</div>
+      <div class="rule">2. Ignorance of the rules does not exempt you from punishment — you are responsible for being aware of them.</div>
+      <div class="rule">3. If someone hacks into your account and abuses your rank or breaks the rules, we are not responsible for that — you are.</div>
+      <div class="rule">4. The server staff roles are: Police, Manager, Developer, CZ-Builder, Dep.Owner, Creator.</div>
+      <div class="rule">5. Rank suspension is permanent in some cases, so be careful.</div>
+    </div>
+
+    <div class="section">
+      <div class="note"><strong>Server rules (page 2/6)</strong></div>
+      <div class="rule">1.1 Spam, flood, insults, 18+ content, and excessive vulgar or offensive language in chat is forbidden. Punishment: warn, tempmute 30m/90m, ban.</div>
+      <div class="rule">1.2 Begging in any form is forbidden. Punishment: warn, tempmute 30m/12h, ban-cid.</div>
+      <div class="rule">1.3 Creating advertisements or promoting other servers is forbidden. Punishment: ban-ip, psban.</div>
+      <div class="rule">1.4 Using offensive language against the server is forbidden. Punishment: warn, tempmute, psban.</div>
+    </div>
+
+    <div class="section">
+      <div class="note"><strong>Server rules (page 3/6)</strong></div>
+      <div class="rule">2.1 Use of game modifications, hacks, or third-party software is forbidden. Punishment: tempban 48h, ban, ban-cid, ban-ip.</div>
+      <div class="rule">2.2 Griefing after teleporting to a player, or killing them via /tp, is prohibited. Punishment: warn, tempban 24h, ban, rank withdrawal.</div>
+      <div class="rule">2.3 Using building commands in protected areas without permission is prohibited. Punishment: ban, rank withdrawal.</div>
+      <div class="rule">2.4 Using Creative mode or Fly in the PvP arena is prohibited. Punishment: kick, tempban 24h, ban.</div>
+      <div class="rule">2.5 Teleporting to a player without permission when they ask you to leave is forbidden. Punishment: kick, warn, tempban 48h, ban, rank withdrawal.</div>
+    </div>
+
+    <div class="section">
+      <div class="note"><strong>Server rules (page 4/6)</strong></div>
+      <div class="rule">3.1 Creating regions, account names, or clan names with vulgar or 18+ content is forbidden. Punishment: warn, ban, ban-cid.</div>
+      <div class="rule">3.2 Logging into accounts that do not belong to you (especially staff accounts) is forbidden. Punishment: kick, ban-ip, psban.</div>
+      <div class="rule">3.3 Building or placing signs with 18+ content is forbidden. Punishment: tempban 24h, ban, ban-cid.</div>
+      <div class="rule">3.4 Disrupting server functionality (creating lag) is forbidden. Punishment: tempban 48h, ban, psban.</div>
+    </div>
+
+    <div class="section">
+      <div class="note"><strong>Server rules (page 5/6)</strong></div>
+      <div class="rule">4.1 Abusing commands such as /cc, /tell or similar is forbidden. Punishment: warn, kick, tempban 48h, ban-ip, rank withdrawal.</div>
+      <div class="rule">4.2 Punishing players with non-existent or incorrect reasons is prohibited. Punishment: tempban 24h/7d, ban, rank withdrawal.</div>
+      <div class="rule">4.3 AFK abuse. Punishment: kick, tempban 24h, ban.</div>
+    </div>
+
+    <div class="section">
+      <div class="note"><strong>Something else you need to know:</strong></div>
+      <div class="rule">1. If a player attempts to bypass a punishment or rejoins with another account and breaks rules again, a /ban-ip or /ban-cid may be executed (reason: 'Bypass').</div>
+      <div class="rule">2. If you have been punished without reason or invalidly, contact us on Discord and present evidence. If you don't have evidence, create a ticket with /ticket.</div>
+      <div class="rule">3. /psban is a staff-only command and permanently bans a player with no possibility of unban.</div>
+    </div>
+
+    <a class="back" href="index.html">← Back to home</a>
+  </div>
 </body>
-</html>
+      </html>
